[gd_scene load_steps=20 format=3 uid="uid://cq3fw2li54bru"]

[ext_resource type="Script" path="res://game/world/world_camera.gd" id="1_0tqhe"]
[ext_resource type="Script" path="res://game/game_room.gd" id="1_b4ycu"]
[ext_resource type="PackedScene" uid="uid://bneapx68qdf77" path="res://game/world/arena.tscn" id="2_yxqng"]
[ext_resource type="Script" path="res://game/world/game_controller.gd" id="3_31kcv"]
[ext_resource type="PackedScene" uid="uid://bmylpelnr50lw" path="res://game/gui/main_menu_overlay.tscn" id="4_wre41"]
[ext_resource type="PackedScene" uid="uid://bc8x7f2av1vxp" path="res://game/gui/hero_picker.tscn" id="5_r1lvg"]
[ext_resource type="Script" path="res://game/gameroom_gui_controller.gd" id="5_r84ri"]
[ext_resource type="PackedScene" uid="uid://jva47p3ypmpj" path="res://game/gui/round_info.tscn" id="6_a1h4u"]
[ext_resource type="Script" path="res://game/game_network.gd" id="8_lgayb"]
[ext_resource type="Script" path="res://game/game_round.gd" id="9_yo23v"]
[ext_resource type="Script" path="res://game/input_poller.gd" id="11_15ryg"]
[ext_resource type="PackedScene" uid="uid://cwor7os8b7cbr" path="res://game/gui/hero_info_hud.tscn" id="11_obc47"]

[sub_resource type="Gradient" id="Gradient_238p4"]
offsets = PackedFloat32Array(0.511628, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_bal0x"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u7sd5"]
seamless = true
color_ramp = SubResource("Gradient_238p4")
noise = SubResource("FastNoiseLite_bal0x")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_c866b"]
sky_top_color = Color(0.282353, 0.462745, 0.643137, 1)
sky_curve = 0.0284196
sky_cover = SubResource("NoiseTexture2D_u7sd5")

[sub_resource type="Sky" id="Sky_siqx5"]
sky_material = SubResource("ProceduralSkyMaterial_c866b")

[sub_resource type="Environment" id="Environment_hoq5u"]
background_mode = 2
sky = SubResource("Sky_siqx5")
sky_rotation = Vector3(-3.57792, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_4dlaj"]

[node name="GameRoom" type="Node3D"]
visible = false
script = ExtResource("1_b4ycu")

[node name="GameController" type="Node3D" parent="."]
script = ExtResource("3_31kcv")

[node name="Entities" type="Node3D" parent="GameController"]

[node name="Arena" parent="GameController" instance=ExtResource("2_yxqng")]

[node name="GameNetwork" type="Node3D" parent="."]
script = ExtResource("8_lgayb")

[node name="GameRound" type="Node3D" parent="."]
script = ExtResource("9_yo23v")

[node name="ClientSpecifics" type="Node" parent="."]

[node name="Misc" type="Node3D" parent="ClientSpecifics"]

[node name="ThirdPersonCam" type="Camera3D" parent="ClientSpecifics/Misc"]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 400, 200)
script = ExtResource("1_0tqhe")

[node name="SkyBox" type="WorldEnvironment" parent="ClientSpecifics/Misc"]
environment = SubResource("Environment_hoq5u")

[node name="Sun" type="DirectionalLight3D" parent="ClientSpecifics/Misc/SkyBox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="InputRaycastTargetBody" type="StaticBody3D" parent="ClientSpecifics/Misc"]
collision_layer = 8
collision_mask = 0

[node name="WorldBoundaryPlane" type="CollisionShape3D" parent="ClientSpecifics/Misc/InputRaycastTargetBody"]
shape = SubResource("WorldBoundaryShape3D_4dlaj")

[node name="GUI" type="Control" parent="ClientSpecifics"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_r84ri")

[node name="HeroInfoHUD" parent="ClientSpecifics/GUI" instance=ExtResource("11_obc47")]
layout_mode = 1
mouse_filter = 2

[node name="RoundInfo" parent="ClientSpecifics/GUI" instance=ExtResource("6_a1h4u")]
layout_mode = 1

[node name="HeroPicker" parent="ClientSpecifics/GUI" instance=ExtResource("5_r1lvg")]
visible = false
layout_mode = 1

[node name="MenuOverlay" parent="ClientSpecifics/GUI" instance=ExtResource("4_wre41")]
layout_mode = 1

[node name="InputPoller" type="Node3D" parent="ClientSpecifics"]
script = ExtResource("11_15ryg")
